# cargo-x402

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES_BETA.md  ROADMAP.md  TEMPLATE_AUTHOR_GUIDE.md  TEMPLATE_SCHEMA.md  USER_GUIDE.md
.github/workflows/: release.yml  test.yml
examples/: basic.rs
scripts/: build-all.sh
src/: error.rs  interactive.rs  lib.rs  main.rs
src/commands/: create.rs  list.rs  mod.rs
src/discovery/: cache.rs  github.rs  mod.rs
src/schema/: mod.rs  template.rs  validator.rs
src/template/: downloader.rs  mod.rs  render.rs
tests/: command_tests.rs  critical_integration_test.rs  discovery_tests.rs  integration_test.rs  schema_tests.rs  template_rendering_tests.rs  test.rs
