[package]
name = "cargo-x402"
version = "0.1.0"
edition = "2024"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]

###############################################################################
description = "Scaffold x402 projects."
documentation = "https://docs.rs/cargo-x402"
homepage = "https://github.com/cryptopatrick/cargo-x402"
repository = "https://github.com/cryptopatrick/cargo-x402"
readme = "README.md"
keywords = ["x402"]
categories = ["command-line-interface", "command-line-utilities"]
license = "MIT"
autotests = false

###############################################################################
[dependencies]
clap = { version = "4", features = ["derive"] }