[package]
name = "cargo-x402"
version = "0.5.1"
edition = "2021"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]
description = "Scaffold x402 projects from templates."
documentation = "https://docs.rs/cargo-x402"
homepage = "https://github.com/cryptopatrick/cargo-x402"
repository = "https://github.com/cryptopatrick/cargo-x402"
readme = "README.md"
keywords = ["x402", "scaffold", "template", "cli"]
categories = ["command-line-interface", "command-line-utilities"]
license = "MIT"

[[bin]]
name = "cargo-x402"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
liquid = "0.26"
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"
walkdir = "2.4"
glob = "0.3"
zip = "0.6"
tempfile = "3.8"
regex = "1.10"
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1.4"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"